--- a/deploy-app/action.yaml
+++ b/deploy-app/action.yaml
@@ -34,7 +34,7 @@ runs:
         docker build -f ${{ inputs.dockerfile_path }} -t $(echo $REGISTRY)/$(echo ${{ inputs.app_name }}):$(echo ${{ inputs.tag }}) .
         docker tag $(echo $REGISTRY)/$(echo ${{ inputs.app_name }}):$(echo ${{ inputs.tag }}) $(echo $REGISTRY)/$(echo ${{ inputs.app_name }}):latest
       env:
-        REGISTRY: ${{ inputs.registry } 
+        REGISTRY: ${{ inputs.registry }}
 
     - name: Log in to DigitalOcean Container Registry with short-lived credentials
       shell: bash
@@ -57,7 +57,7 @@ runs:
         MYSQL_SERVER: ${{ secrets.MYSQL_SERVER }}
         MYSQL_PORT: ${{ secrets.MYSQL_PORT }}
         MYSQL_USERNAME: ${{ secrets.MYSQL_USERNAME }}
-        MYSQL_PASSWORD: ${{ secrets.MYSQL_DB_PASSWORD } 
+        MYSQL_PASSWORD: ${{ secrets.MYSQL_DB_PASSWORD }}
 
     - name: Update App Platform app
       shell: bash
