--- a/.github/workflows/publishAction.yaml
+++ b/.github/workflows/publishAction.yaml
@@ -24,17 +24,14 @@ jobs:
       - name: Create new tag
         run: git tag $NEW_TAG
 
-      - name: Push tags
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tags: true
+      - name: Push new tag to remote
+        run: git push origin ${{ env.NEW_TAG }}
 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.NEW_TAG }}
           release_name: Release ${{ env.NEW_TAG }}
