add docker build args option

--- a/deploy-app-js/action.yaml
+++ b/deploy-app-js/action.yaml
@@ -19,8 +19,12 @@ inputs:
   app_spec_vars:
     description: 'JSON string of key value pairs that will be passed to app spec'
     required: true
+  docker_env_vars:
+    description: 'JSON string of key value pairs that will be passed to docker'
+    required: false
+    default: '{}'
   docker_build_context:
-    description: 'JSON string of key value pairs that will be passed to app spec'
+    description: 'docker build context (defaults to root working dir)'
     default: '.'
     required: false
 runs:
